better way to construct the URL for a file. Don't rely on file://localhost